; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_lock.c_flock_from_file_lock.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_lock.c_flock_from_file_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file_lock = type { i64, i64, i32, i32 }
%struct.flock_ = type { i64, i64, i32, i32, i32 }

@LSEEK_SET = common dso_local global i32 0, align 4
@OFF_T_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file_lock*, %struct.flock_*)* @flock_from_file_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @flock_from_file_lock(%struct.file_lock* %0, %struct.flock_* %1) #0 {
  %3 = alloca %struct.file_lock*, align 8
  %4 = alloca %struct.flock_*, align 8
  store %struct.file_lock* %0, %struct.file_lock** %3, align 8
  store %struct.flock_* %1, %struct.flock_** %4, align 8
  %5 = load %struct.file_lock*, %struct.file_lock** %3, align 8
  %6 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %5, i32 0, i32 3
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.flock_*, %struct.flock_** %4, align 8
  %9 = getelementptr inbounds %struct.flock_, %struct.flock_* %8, i32 0, i32 4
  store i32 %7, i32* %9, align 8
  %10 = load i32, i32* @LSEEK_SET, align 4
  %11 = load %struct.flock_*, %struct.flock_** %4, align 8
  %12 = getelementptr inbounds %struct.flock_, %struct.flock_* %11, i32 0, i32 3
  store i32 %10, i32* %12, align 4
  %13 = load %struct.file_lock*, %struct.file_lock** %3, align 8
  %14 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.flock_*, %struct.flock_** %4, align 8
  %17 = getelementptr inbounds %struct.flock_, %struct.flock_* %16, i32 0, i32 0
  store i64 %15, i64* %17, align 8
  %18 = load %struct.file_lock*, %struct.file_lock** %3, align 8
  %19 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @OFF_T_MAX, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %34

23:                                               ; preds = %2
  %24 = load %struct.file_lock*, %struct.file_lock** %3, align 8
  %25 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.file_lock*, %struct.file_lock** %3, align 8
  %28 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = sub nsw i64 %26, %29
  %31 = add nsw i64 %30, 1
  %32 = load %struct.flock_*, %struct.flock_** %4, align 8
  %33 = getelementptr inbounds %struct.flock_, %struct.flock_* %32, i32 0, i32 1
  store i64 %31, i64* %33, align 8
  br label %37

34:                                               ; preds = %2
  %35 = load %struct.flock_*, %struct.flock_** %4, align 8
  %36 = getelementptr inbounds %struct.flock_, %struct.flock_* %35, i32 0, i32 1
  store i64 0, i64* %36, align 8
  br label %37

37:                                               ; preds = %34, %23
  %38 = load %struct.file_lock*, %struct.file_lock** %3, align 8
  %39 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %38, i32 0, i32 2
  %40 = load i32, i32* %39, align 8
  %41 = load %struct.flock_*, %struct.flock_** %4, align 8
  %42 = getelementptr inbounds %struct.flock_, %struct.flock_* %41, i32 0, i32 2
  store i32 %40, i32* %42, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
